fixing style and adding default scrollbar

--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ section {
   border-bottom: 2px solid #ccc;
 }
 
-.card .card-block .card-text::-webkit-scrollbar { 
+/*.card .card-block .card-text::-webkit-scrollbar { 
     display: none; 
-}
+}*/
 
 .card .card-block .card-text{
   text-align: justify;
